[project]
name = "ConnectKit-Database"
version = "1.3.3"
description = "Wrapper for connection to database"
authors = [
    { name = "RealMetamorph", email = "andr.timchuk@yandex.ru" },
]
keywords = ["connectkit", "database", "postgres", "postgresql",
    "mysql", "sqlite3", "sqlite", "mariadb", "async", "asyncio", "sqlalchemy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Front-Ends",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "sqlalchemy>=2.0.25",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.1.0"
]

[project.urls]
Homepage = "https://github.com/mtuciru/ConnectKit-Database"
Repository = "https://github.com/mtuciru/ConnectKit-Database.git"


[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.9",
]
asyncpg = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
]
mysql = [
    "mysqlclient>=2.2.4",
]
aiomysql = [
    "aiomysql>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.25"
]
aiosqlite = [
    "aiosqlite>=0.19.0",
    "sqlalchemy[asyncio]>=2.0.25",
]
all = [
    "database[mysql,postgresql]",
]
asyncall = [
    "database[asyncpg,aiomysql,aiosqlite]",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
tests = "echo 'tests will be here'"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
]
